browser/metro/theme/firstrun.css
#
start
-
container
[
viewstate
=
"
snapped
"
]
.
firstrun
{
display
:
none
;
}
#
start
-
container
[
viewstate
=
"
landscape
"
]
#
start
-
topsites
-
grid
.
richgrid
-
grid
#
start
-
container
:
not
(
[
viewstate
=
"
snapped
"
]
)
#
start
-
bookmarks
-
grid
.
richgrid
-
grid
#
start
-
container
:
not
(
[
viewstate
=
"
snapped
"
]
)
#
start
-
history
-
grid
.
richgrid
-
grid
{
-
moz
-
column
-
count
:
1
!
important
;
}
#
start
-
container
[
viewstate
=
"
landscape
"
]
#
start
-
topsites
-
grid
.
richgrid
-
grid
{
padding
-
bottom
:
30px
;
}
#
start
-
container
:
not
(
[
viewstate
=
"
snapped
"
]
)
#
start
-
history
-
grid
richgriditem
:
nth
-
child
(
n
+
3
)
#
start
-
container
:
not
(
[
viewstate
=
"
snapped
"
]
)
#
start
-
bookmarks
-
grid
richgriditem
:
nth
-
child
(
n
+
3
)
#
start
-
container
[
viewstate
=
"
portrait
"
]
#
start
-
topsites
-
grid
richgriditem
:
nth
-
child
(
n
+
4
)
{
display
:
none
;
}
#
start
-
container
[
viewstate
=
"
portrait
"
]
{
padding
-
top
:
120px
;
padding
-
bottom
:
120px
;
}
.
meta
{
background
-
image
:
none
;
}
#
firstrun
-
welcome
{
width
:
550px
;
font
-
family
:
"
Segoe
UI
"
sans
-
serif
;
padding
:
30px
0
;
}
.
welcome
-
image
{
background
-
image
:
url
(
"
chrome
:
/
/
branding
/
content
/
metro_firstrun_logo
.
png
"
)
;
width
:
220px
;
height
:
220px
;
}
#
firstrun
-
welcome
.
welcome
-
title
{
font
-
size
:
25px
;
color
:
#
4d4e53
;
line
-
height
:
30px
;
padding
-
top
:
20px
;
}
#
firstrun
-
welcome
.
welcome
-
subtitle
{
font
-
size
:
16px
;
color
:
#
808080
;
line
-
height
:
22px
;
padding
-
top
:
10px
;
}
.
instruction
-
label
{
font
-
size
:
16px
;
color
:
#
808080
;
line
-
height
:
22px
;
}
.
instruction
-
arrow
{
width
:
76px
;
height
:
76px
;
}
.
instruction
-
arrow
.
arrow
-
top
.
instruction
-
arrow
.
arrow
-
down
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
arrow
-
top
.
png
"
)
;
}
.
instruction
-
arrow
.
arrow
-
down
{
transform
:
rotate
(
180deg
)
;
}
.
instruction
-
arrow
.
arrow
-
left
.
instruction
-
arrow
.
arrow
-
right
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
arrow
-
left
.
png
"
)
;
}
.
instruction
-
arrow
.
arrow
-
right
{
transform
:
rotate
(
180deg
)
scaleY
(
-
1
)
;
}
#
instruction
-
tabs
{
position
:
absolute
;
top
:
10px
;
transform
:
translateX
(
calc
(
630px
-
50
%
)
)
;
}
#
start
-
container
[
viewstate
=
"
portrait
"
]
#
instruction
-
tabs
{
transform
:
translateX
(
calc
(
50vw
-
50
%
)
)
;
}
#
start
-
container
[
viewstate
=
"
landscape
"
]
#
instruction
-
topsites
{
position
:
absolute
;
bottom
:
20px
;
transform
:
translateX
(
-
50
%
)
;
margin
-
left
:
20px
;
}
#
start
-
container
[
viewstate
=
"
portrait
"
]
#
instruction
-
topsites
{
transform
:
translateX
(
calc
(
150px
+
50
%
)
)
translateY
(
-
60px
)
;
}
#
start
-
container
[
viewstate
=
"
landscape
"
]
#
instruction
-
history
#
start
-
container
[
viewstate
=
"
landscape
"
]
#
instruction
-
bookmarks
{
position
:
absolute
;
top
:
310px
;
transform
:
translateX
(
calc
(
-
300px
-
50
%
)
)
;
}
#
start
-
container
[
viewstate
=
"
portrait
"
]
#
instruction
-
history
#
start
-
container
[
viewstate
=
"
portrait
"
]
#
instruction
-
bookmarks
{
transform
:
translateX
(
-
55px
)
;
}
#
start
-
container
[
viewstate
=
"
landscape
"
]
#
instruction
-
menu
{
position
:
fixed
;
bottom
:
16px
;
right
:
37px
;
}
#
start
-
container
[
viewstate
=
"
portrait
"
]
#
instruction
-
menu
{
position
:
absolute
;
right
:
37px
;
transform
:
translateY
(
40px
)
;
}
#
start
-
container
[
viewstate
=
"
landscape
"
]
#
start
-
history
{
padding
-
left
:
50px
;
}
media
(
min
-
resolution
:
min_res_140pc
)
{
.
instruction
-
arrow
.
arrow
-
top
.
instruction
-
arrow
.
arrow
-
down
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
arrow
-
top
1
.
4x
.
png
"
)
;
}
.
instruction
-
arrow
.
arrow
-
left
.
instruction
-
arrow
.
arrow
-
right
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
arrow
-
left
1
.
4x
.
png
"
)
;
}
.
welcome
-
image
{
background
-
image
:
url
(
"
chrome
:
/
/
branding
/
content
/
metro_firstrun_logo
1
.
4x
.
png
"
)
;
}
}
media
(
min
-
resolution
:
min_res_180pc
)
{
.
instruction
-
arrow
.
arrow
-
top
.
instruction
-
arrow
.
arrow
-
down
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
arrow
-
top
1
.
8x
.
png
"
)
;
}
.
instruction
-
arrow
.
arrow
-
left
.
instruction
-
arrow
.
arrow
-
right
{
background
-
image
:
url
(
"
chrome
:
/
/
browser
/
skin
/
images
/
arrow
-
left
1
.
8x
.
png
"
)
;
}
.
welcome
-
image
{
background
-
image
:
url
(
"
chrome
:
/
/
branding
/
content
/
metro_firstrun_logo
1
.
8x
.
png
"
)
;
}
}

