Bug 962236 - Wrap long tutorial texts on about:start. r+ui-r=rsilveira
UltraBlame original commit: b25ece8898494fa8e1770da307addc64008c7226

--- a/browser/metro/theme/firstrun.css
+++ b/browser/metro/theme/firstrun.css
@@ -391,6 +391,18 @@ top
 .
 instruction
 -
+content
+-
+container
+{
+width
+:
+380px
+;
+}
+.
+instruction
+-
 label
 {
 font
@@ -501,6 +513,26 @@ arrow
 arrow
 -
 right
+.
+instruction
+-
+arrow
+.
+arrow
+-
+left
+-
+straight
+.
+instruction
+-
+arrow
+.
+arrow
+-
+right
+-
+straight
 {
 background
 -
@@ -547,6 +579,50 @@ scaleY
 (
 -
 1
+)
+;
+}
+.
+instruction
+-
+arrow
+.
+arrow
+-
+left
+-
+straight
+{
+transform
+:
+rotate
+(
+220deg
+)
+scaleX
+(
+-
+1
+)
+;
+}
+.
+instruction
+-
+arrow
+.
+arrow
+-
+right
+-
+straight
+{
+transform
+:
+rotate
+(
+-
+220deg
 )
 ;
 }
@@ -629,20 +705,63 @@ absolute
 ;
 bottom
 :
-20px
-;
-transform
-:
-translateX
-(
--
-50
+15
 %
-)
 ;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+landscape
+"
+]
+#
+instruction
+-
+topsites
+.
+instruction
+-
+content
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+start
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+portrait
+"
+]
+#
+instruction
+-
+topsites
+-
+box
+{
 margin
 -
-left
+bottom
 :
 20px
 ;
@@ -662,24 +781,125 @@ portrait
 instruction
 -
 topsites
-{
-transform
-:
-translateX
-(
-calc
-(
-150px
-+
-50
-%
-)
-)
-translateY
-(
+.
+instruction
 -
-60px
-)
+content
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+center
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+portrait
+"
+]
+#
+instruction
+-
+topsites
+.
+arrow
+-
+left
+-
+straight
+{
+display
+:
+none
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+portrait
+"
+]
+#
+instruction
+-
+topsites
+.
+arrow
+-
+left
+{
+display
+:
+block
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+landscape
+"
+]
+#
+instruction
+-
+topsites
+.
+arrow
+-
+left
+-
+straight
+{
+display
+:
+block
+;
+}
+#
+start
+-
+container
+[
+viewstate
+=
+"
+landscape
+"
+]
+#
+instruction
+-
+topsites
+.
+arrow
+-
+left
+{
+display
+:
+none
 ;
 }
 #
@@ -766,6 +986,21 @@ portrait
 instruction
 -
 bookmarks
+#
+start
+-
+container
+[
+viewstate
+=
+"
+portrait
+"
+]
+#
+instruction
+-
+topsites
 {
 transform
 :
@@ -835,6 +1070,26 @@ translateY
 (
 40px
 )
+;
+}
+#
+start
+-
+container
+#
+instruction
+-
+menu
+.
+instruction
+-
+label
+{
+max
+-
+width
+:
+300px
 ;
 }
 #
